# worldcompiler

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
contracts/: InputAddressedRegistry.vy  M1.sol  __init__.py  hex0.M1
script/: benchmark.py  deploy.py
src/: M1.sol  M1.sol.prompt  __init__.py  datacontract_initcode_prefix.hex2  hex0.M1  hex0.sol  hex2.sol  inputaddressed_initcode_template.M1
tests/: conftest.py  test_M1.py  test_datacontract.py  test_hex0.py  test_inputaddressed.py  test_inputaddressed_registry.py  test_integration.py
