[project]
name = "ethbootstrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [ "packages/*" ]

[tool.mypy]
exclude = ["tests/"]

[tool.ruff.lint]
ignore = [
    "F401",  # Module imported but unused, complains in __init__.py files
]
